Renaming project to CyclopsTetrahedralizer.

--- a/cyclopsTetrahedralizer/CMakeLists.txt
+++ b/cyclopsTetrahedralizer/CMakeLists.txt
@@ -9,7 +9,7 @@ if (POLICY CMP0141)
   set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
 endif()
 
-project (CyclopsTessellate
+project (CyclopsTetrahedralizer
     VERSION 1.0 
     LANGUAGES CXX
 )
@@ -25,13 +25,13 @@ option(BUILD_LIBRARY "Build library" OFF)
 file(GLOB_RECURSE sources src/*.cpp src/*.h)
 
 if(BUILD_LIBRARY)
-  add_library(cyclopsTessellateLib STATIC ${sources})
+  add_library(cyclopsTetrahedralizerLib STATIC ${sources})
   #Add compile time property
-  target_compile_definitions(cyclopsTessellateLib PRIVATE -DCYCLOPS_TESS_LIB)
+  target_compile_definitions(cyclopsTetrahedralizerLib PRIVATE -DCYCLOPS_TESS_LIB)
 endif()
 
 if(BUILD_EXECUTABLE)
-  add_executable(cyclopsTessellate ${sources})
+  add_executable(cyclopsTetrahedralizer ${sources})
 endif()
 
 
